force-app/main/default/objects/docutizexa__ObjectUpgradeSetting__c/docutizexa__ObjectUpgradeSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>帳票DX for Salesforce のオブジェクトアップグレードに関する設定</description>
    <label>帳票DX for Salesforce オブジェクトアップグレード設定</label>
</CustomObject>