force-app/main/default/objects/docutizexa__ObjectUpgradeSetting__c/fields/docutizexa__fs_ApexJobExpirationThresholds__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_ApexJobExpirationThresholds__c</fullName>
    <inlineHelpText>アップグレードに使用するApexジョブの有効期間をミリ秒単位で指定します。有効期間を過ぎても処理が残っている場合は、新たにApexジョブを作成して処理を継続します。</inlineHelpText>
    <label>Apex job expiration thresholds</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>