force-app/main/default/objects/docutizexa__ObjectUpgradeSetting__c/fields/docutizexa__fs_IsBackgroundProcessingEventTgrActive__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_IsBackgroundProcessingEventTgrActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Falseの場合、左記Apexトリガーが非起動となります。</inlineHelpText>
    <label>ActiveBgProcessingEventTgrofDocutizeXa</label>
    <type>Checkbox</type>
</CustomField>