force-app/main/default/objects/docutizexa__ObjectUpgradeSetting__c/fields/docutizexa__fs_LastUpgradeMajorVersion__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_LastUpgradeMajorVersion__c</fullName>
    <label>Last upgrade version (major)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>